esteban-s.css
                            /****** Global Styles ******/
body {
    /*background-color:red;*/
    font-family:"Source Sans Pro", sans-serif;
    color:#5E5D5E

}

.content-wrapper {
    width:1200px;
    margin: 0 auto;
    overflow: auto;
   
}

.head-wrapper {
    width:1200px;
    margin: 0px auto; 
    overflow: auto;
   
} 
 span {
    font-family: 'Galada', cursive;
    color: #F16059;
 }

                            /****** Header Styles ******/
.homepage-hero {
    background-color: rgb(153, 228, 228);
    background: url("https://media.architecturaldigest.com/photos/5ea338e602210500083cc877/16:9/w_2560%2Cc_limit/GettyImages-1126778861.jpg"), #F9EFEF; 
    /*background: url("Pictures/Momentum.png"), #F9EFEF; */
    /*background-blend-mode: lighten;*/
    background-size: cover;
    background-position: center;
    height: 787px;
    

}
header h1 {
    float: left;
    width: 300px;
    font-size: 30px;
    padding: 20px 0px;
    /*outline: 3px dotted red*/
    
}

header h1 a {
    font-family: "Galada", cursive;
    text-decoration: none;
    color: #F16059;
}

header h2 {
    width: 1100px;
    clear: both; 
    font-family: "Lora", serif;
    font-size: 72px;
    line-height: 100px;
    color: #f4f9ff;
    text-align: center;
    padding-bottom: 10px;
    margin-left: 50px;
}

                                   /****** TOP THREE******/
#top-three {
    background-color: #000000;
    background-image: url('../pictures/momentum.png'), url('../pictures/swings.png'), url('../pictures/getting-curious.png');
    background-position: left, center, right; 
    background-repeat: no-repeat, no-repeat, no-repeat;
    background-size: 415px 500px, 440px 500px, 425px 500px;
    height: 600px;
}

#top-three .content-wrapper {
    width: 1200px;
    text-align: center;
    padding: 75px 25px 75px 25px; 
    margin: 0 auto;  
}

#top-three ul li a {
    text-decoration: wavy;
    font-size: 50px;
    font-weight:bolder;
    color: white;
    font-family: "Lora", serif;
}

#top-three ul li #swing {
    float: left;
    padding-top: 345px;
    padding-left: 100px;
}

#top-three ul li #why {
    float: left;
    margin-top: 365px; 
}
    
#top-three ul li #curious {
    float: right;
    margin-top: 330px; 
}

                                /****** THE MISSION ******/

#the-mission .content-wrapper {
    padding-top: 80px;
    padding-bottom: 80px;
}
#the-mission h2 {
    font-family: 'Lora', serif;
    font-size: 36px;
    padding-left: 50px;
    color: #817F80;
}

#the-mission p {
    float: left;
    width: 500px;
    font-size: 20px;
    line-height: 50px;
    padding-left: 50px;
    padding-right: 50px;

}

#the-mission #mission-image {
    width: 600px;
    height: 400px;
    margin-bottom: 40px;
}

                                /***** SWING IT *****/

#swing-it {
    background-color: #f5f5f5;
}

#swing-it .content-wrapper {
    padding-top: 60px;
    padding-bottom: 100px;

}
#swing-it h2 {
    font-family: 'Lora', serif;
    font-size: 36px;
    padding-right: 275px;
    padding-bottom: 0;
    color: #817F80;
    text-align: right;
}

#swing-it h4 {
    float: right;
    clear: both;
    padding-right: 455px;
    margin: 0;
}

#swing-it p {
    float: right;
    width: 500px;
    font-size: 20px;
    line-height: 40px;
    padding-left: 50px;
    padding-right: 50px;

}

#swing-it #swings-image {
    width: 300px;
    height: 400px;
    padding-left: 150px;
}


                                /****** Stay Curious ******/
#stay-curious {
    background-color: white;
}

#stay-curious .content-wrapper {
    padding-top: 60px;
    padding-bottom: 80px;

}
#stay-curious h2 {
    font-family: 'Lora', serif;
    font-size: 36px;
    padding-left: 50px;
    color: #817F80;
    text-align: left;
}

 #stay-curious h3 {
    float: left;
    clear: both;
    padding-left: 50px;
    margin: 0;
    font-size: 28px;
    font-weight: 300;
} 

#stay-curious #curious-image {
    width: 600px;
    height: 400px;
    margin-bottom: 40px;
}


/* #stay-curious p {
    float: left;
    width: 500px;
    font-size: 20px;
    line-height: 40px;
    padding-left: 50px;
    padding-right: 50px;
    clear:both;

} */

#stay-curious ul {
    width: 500px;
    float: left;
    padding-top: 30px;
    margin: 0;
    clear: both;
    padding-left: 100px;
    margin: 20px 0;

}

#stay-curious ul li{
    font-size: 20px;
    line-height: 50px;
    
}
    


/****** Contact Styles ******/

footer {
    background-color: #e9f8f9;
}

#contact .content-wrapper {
    padding-top: 110px;
    padding-bottom: 10px;

}


#contact h2 {
    font-family: 'Lora', serif;
    font-size: 36px;
    /*font-weight: 200px*/
    margin: 30px 0; 
}

#contact .help-info {
    float: left;
    width: 600px;
    padding-right: 100px;
    box-sizing: border-box;
    padding-bottom: 30px;
}

#contact p {
    font-size: 24px;
    line-height: 50px;
}
#contact a {
    text-decoration: none;
}

#contact .help-info h2 {
    font-size: 36px;
    line-height: 36px;
    font-weight: 300px;


}

#contact .help-info a span {
    font-size: 24px;
    
}

#contact #slack-portal {
    width: 200px;
    height: 80px;
    box-sizing: border-box;
    clear: both;
}
#contact #slack-portal strong {
    padding-right: 15px;
}


#contact .slack a {
    line-height: 36px;
    font-size: 40px;
    font-family: Tahoma, sans-serif;
    font-weight: bolder;
    color: #000000;
}

#contact strong {
    display:inline-flex;
    width: auto;
    float: right;
    padding-top: 20px;
    padding-right: 280px;
}

#contact .contact-wrapper {
    padding-bottom: 50px;

}

#contact #copyright  {
    width: 1200px;
    margin: 0;
    padding-top: 0;
    padding-left:500px;
}












#contact .stuck-image{
    float: left;
    width: 600px;
}

#contact #stuck-picture {
    width: 500px;
    height: 400px;
    border: 12px solid white;
    margin:0 50px;
    box-sizing: border-box;
}

/*#contact .together {
    border: solid 2px white;
} */

/*#contact .contact-info {
    float:left;
    width: 600px;
    padding-left: 100px;
    box-sizing: border-box;
}


#contact #footerprompt-coffee {
    margin-bottom: 20px;
}

#contact #footerprompt-social {
    margin-top: 20px;
    margin-bottom: 20px;
}

#contact #envlp-icon {
    padding-right: 10px;
}

#contact .contact-info a {
    font-size: 24px;
    line-height: 36px;
    text-decoration: none;
    color: #5E5D5E

}

#contact ul {
    padding-left: 0;
    margin: 0px;

} 

#contact ul li {
    display: inline;
}

#contact ul img {
    padding-right: 50px;
}

/*header nav {
    width: 800px;
    float:right;
    text-align: right;
    padding: 75px 25px 75px 0px;
    /*outline: 3px dotted red
} 

/*header ul li {
    display: inline-block;

}

/*header ul li a {
    text-transform: uppercase;
    font-size: 18px;
    font-family: "Source Sans Pro", sans-serif;
    color:#727172;
    padding-left: 80px;
    outline: 3px dotted red
} */

